@@ -1,4 +1,4 @@
-.TH SG_START "8" "January 2011" "sg3_utils\-1.31" SG3_UTILS
+.TH SG_START "8" "February 2011" "sg3_utils\-1.31" SG3_UTILS
 .SH NAME
 sg_start \- send SCSI START STOP UNIT command to start, stop, load or
 eject medium
@@ -105,7 +105,7 @@ FORCE_IDLE_0 (SBC) and 0xb (decimal 11) for FORCE_STANDBY_0 (SBC). See recent
 SBC\-3, MMC\-5 and SAS drafts at www.t10.org for more information.
 .TP
 \fB\-r\fR, \fB\-\-readonly\fR
-open the \fIDEVICE\fR in read-only mode. Maybe required in Linux to stop a
+open the \fIDEVICE\fR in read\-only mode. Maybe required in Linux to stop a
 nuisance spin\-up if the \fIDEVICE\fR is an ATA disk. The nuisance spin\-up
 may occur at the end of this command negating the effect of the
 \fI\-\-stop\fR option.
